@@ -3366,59 +3366,6 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**      * Copy compressed data.      */
-DECL|method|copyCompressedData
-name|void
-name|copyCompressedData
-parameter_list|(
-name|DataOutput
-name|out
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-assert|assert
-name|getVersion
-argument_list|()
-operator|==
-name|VERSION_CURRENT
-assert|;
-specifier|final
-name|long
-name|chunkEnd
-init|=
-name|docBase
-operator|+
-name|chunkDocs
-operator|==
-name|numDocs
-condition|?
-name|maxPointer
-else|:
-name|indexReader
-operator|.
-name|getStartPointer
-argument_list|(
-name|docBase
-operator|+
-name|chunkDocs
-argument_list|)
-decl_stmt|;
-name|out
-operator|.
-name|copyBytes
-argument_list|(
-name|fieldsStream
-argument_list|,
-name|chunkEnd
-operator|-
-name|fieldsStream
-operator|.
-name|getFilePointer
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 comment|/**      * Check integrity of the data. The iterator is not usable after this method has been called.      */
 DECL|method|checkIntegrity
 name|void
