@@ -2371,170 +2371,6 @@ literal|1
 index|]
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|numBufferedDocs
-operator|==
-literal|0
-comment|// starting a new chunk
-operator|&&
-name|startOffsets
-index|[
-name|it
-operator|.
-name|chunkDocs
-operator|-
-literal|1
-index|]
-operator|<
-name|chunkSize
-comment|// chunk is small enough
-operator|&&
-name|startOffsets
-index|[
-name|it
-operator|.
-name|chunkDocs
-operator|-
-literal|1
-index|]
-operator|+
-name|it
-operator|.
-name|lengths
-index|[
-name|it
-operator|.
-name|chunkDocs
-operator|-
-literal|1
-index|]
-operator|>=
-name|chunkSize
-comment|// chunk is large enough
-operator|&&
-name|nextDeletedDoc
-argument_list|(
-name|it
-operator|.
-name|docBase
-argument_list|,
-name|liveDocs
-argument_list|,
-name|it
-operator|.
-name|docBase
-operator|+
-name|it
-operator|.
-name|chunkDocs
-argument_list|)
-operator|==
-name|it
-operator|.
-name|docBase
-operator|+
-name|it
-operator|.
-name|chunkDocs
-condition|)
-block|{
-comment|// no deletion in the chunk
-assert|assert
-name|docID
-operator|==
-name|it
-operator|.
-name|docBase
-assert|;
-comment|// no need to decompress, just copy data
-name|indexWriter
-operator|.
-name|writeIndex
-argument_list|(
-name|it
-operator|.
-name|chunkDocs
-argument_list|,
-name|fieldsStream
-operator|.
-name|getFilePointer
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|writeHeader
-argument_list|(
-name|this
-operator|.
-name|docBase
-argument_list|,
-name|it
-operator|.
-name|chunkDocs
-argument_list|,
-name|it
-operator|.
-name|numStoredFields
-argument_list|,
-name|it
-operator|.
-name|lengths
-argument_list|)
-expr_stmt|;
-name|it
-operator|.
-name|copyCompressedData
-argument_list|(
-name|fieldsStream
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|docBase
-operator|+=
-name|it
-operator|.
-name|chunkDocs
-expr_stmt|;
-name|docID
-operator|=
-name|nextLiveDoc
-argument_list|(
-name|it
-operator|.
-name|docBase
-operator|+
-name|it
-operator|.
-name|chunkDocs
-argument_list|,
-name|liveDocs
-argument_list|,
-name|maxDoc
-argument_list|)
-expr_stmt|;
-name|docCount
-operator|+=
-name|it
-operator|.
-name|chunkDocs
-expr_stmt|;
-name|mergeState
-operator|.
-name|checkAbort
-operator|.
-name|work
-argument_list|(
-literal|300
-operator|*
-name|it
-operator|.
-name|chunkDocs
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
 comment|// decompress
 name|it
 operator|.
@@ -2702,7 +2538,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-block|}
 do|while
 condition|(
 name|docID
@@ -2765,55 +2600,6 @@ operator|<
 name|maxDoc
 operator|&&
 operator|!
-name|liveDocs
-operator|.
-name|get
-argument_list|(
-name|doc
-argument_list|)
-condition|)
-block|{
-operator|++
-name|doc
-expr_stmt|;
-block|}
-return|return
-name|doc
-return|;
-block|}
-DECL|method|nextDeletedDoc
-specifier|private
-specifier|static
-name|int
-name|nextDeletedDoc
-parameter_list|(
-name|int
-name|doc
-parameter_list|,
-name|Bits
-name|liveDocs
-parameter_list|,
-name|int
-name|maxDoc
-parameter_list|)
-block|{
-if|if
-condition|(
-name|liveDocs
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-name|maxDoc
-return|;
-block|}
-while|while
-condition|(
-name|doc
-operator|<
-name|maxDoc
-operator|&&
 name|liveDocs
 operator|.
 name|get
